# vga

./: .gitignore  Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
src/: colors.rs  configurations.rs  fonts.rs  lib.rs  registers.rs  vga.rs  vga_colors.rs
src/devices/: bochs.rs  mod.rs  pci.rs
src/drawing/: bresenham.rs  device.rs  mod.rs  octant.rs
src/registers/: attribute_controller.rs  color_palette.rs  crtc_controller.rs  general.rs  graphics_controller.rs  mod.rs  sequencer.rs
src/writers/: graphics_1280x800x256.rs  graphics_320x200x256.rs  graphics_320x240x256.rs  graphics_640x480x16.rs  mod.rs  text_40x25.rs  text_40x50.rs  text_80x25.rs
testing/: Cargo.toml  cargo.toml
testing/src/: gdt.rs  interrupts.rs  lib.rs  serial.rs
testing/tests/: vga.rs
