[package]
name = "testing"
version = "0.1.0"
authors = ["Ryan Kennedy <rkennedy9064@gmail.com>"]
edition = "2018"

[dependencies]
# TODO: Move back to crate when vga mapping is merged in.
bootloader = { git = "https://github.com/RKennedy9064/bootloader", branch = "vga-mappings", features = ["map_physical_memory"] }
conquer-once = { version = "0.2.0", default-features = false }
spinning_top = { version = "0.1.0", features = ["nightly"] }
pic8259_simple = "0.1.1"
vga = { path = "../" }
uart_16550 = "0.2.4"
x86_64 = "0.9.6"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
