[package]
name = "testing"
version = "0.1.0"
authors = ["Ryan Kennedy <rkennedy9064@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
conquer-once = { version = "0.3.2", default-features = false }
spinning_top = { version = "0.2.4", features = ["nightly"] }
pic8259_simple = "0.2.0"
vga = { path = "../" }
uart_16550 = "0.2.14"
x86_64 = "0.14.2"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
